# data_collector

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.api  ICT_CRT_M1_Strategy_v1_6_Clean (1).pine  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
configs/: csv_dukascopy_node_mapping.yaml  csv_ger40_mapping.yaml  grid_example.yaml  live_sources.yaml  sources.yaml  strategy_default.yaml  symbols.yaml  universe_default_40.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_CURRENT.drawio  DATA_SOURCES.md  DOCKER_STORAGE_ON_E.md  LIVE_COLLECTOR.md  MNQ_DATA_SOURCES.md  PROJECT_HISTORY.md  PROJECT_NOW.md  PROJECT_THREAD.md  R2_ARCHIVE_GUIDE.md  STRATEGY_ANALYSIS_PLAYBOOK.md
ict/: __init__.py  cli.py
scripts/: collect_dukascopy_node.py  configure_github_actions_secrets.ps1  dev.ps1  docker_api_entrypoint.sh  generate_synthetic_backtest_csv.py  inspect_neon_live.py  live_collector_service.py  smoke_end_to_end.py
sql/: 001_initial_schema.sql  002_live_collector_schema.sql  003_live_compact_candles.sql
tests/: test_api_analytics.py  test_api_backtests.py  test_api_data_management.py  test_api_review.py  test_archive_store.py  test_backtest_engine.py  test_binance_provider.py  test_cli_backtest_config.py  test_collection_universe.py  test_dashboard.py  test_data_gaps.py  test_data_provider_base.py  test_data_quality.py  test_databento_provider.py  test_grid.py  test_ingest_normalization.py  test_live_collector.py  test_metrics.py  test_pivots.py  test_resample.py  test_strategy_builder.py  test_strategy_primitives.py  (+1 more)
(+104 files in other folders)
